# Semesterprojekt-i-mobile-robotsystemer

./: .gitignore  BUILD_GUIDE.md  CLEANUP_SUMMARY.md  CMAKE_UPDATE_SUMMARY.md  CMakeLists.txt  PI_DEBUGGING_GUIDE.md  RB3_NODE_UPDATES.md  README.md  build_desktop.sh  build_pi.sh  build_tests.sh  frequency_test_results_1764157546.csv  microphone_frequency_sweep  testCRC  transmission_statistics.py  turtlebot_communication.db
ASSETS/: UIHelp.txt
DATABASE/: Database.cpp  Database.h  Logger.cpp  Logger.h  database.cpp  inputs.db  inputs_app
DOCS/: INDEX.md  README.md
DOCS/api/: README_AUDIO_COMM.md  README_CHORD.md  README_LIBRARY.md
DOCS/features/: DUPLICATE_DETECTION_LOCKOUT.md
DOCS/guides/: CRC_USAGE_GUIDE.md  LIBRARY_USAGE.md  VOICE_RECEIVER_GUIDE.md
INCLUDE/: CRC.h  Database.h  Logger.h  UI.h  command_protocol.h  velocityProvider.hpp
LIB/: README.md  audio_comm.cpp  audio_comm.h  audio_receiver.h  audio_receiver_lib.cpp  audio_transmitter.h  audio_transmitter_lib.cpp  frequency_detector.h  frequency_detector_lib.cpp  tone_generator.h  tone_generator_lib.cpp
LIB/examples/: crc_chord_transmission.cpp  onlydection.cpp  simple_chord_example.cpp  tone_example.cpp  tones_and_dection.cpp
MATLAB/: Checksum.mlx  FFT.mlx  Test.mlx
SRC/: AUTO_RESTART_FEATURE.md  CRC.cpp  CRC_USAGE.md  Database.cpp  FREQUENCY_TOLERANCE_UPDATE.md  Logger.cpp  README.md  UI.cpp  command_protocol.cpp  crctest  crctest.cpp  frequency_detector  frequency_detector.cpp  install_deps.sh  main.cpp  mp3_recorder  protocol_sender  protocol_sender.cpp  sender_ui.h  testCRC.cpp  tones  tones.cpp
SRC/Test programs/: FFT_RESOLUTION_IMPROVEMENTS.md  chord_detection_accuracy_test.cpp  chord_receiver.cpp  chord_transmitter.cpp  detection_count_test.cpp  frequency_response_test.cpp  microphone_frequency_sweep.cpp  protocol_latency_test.cpp  protocol_latency_test_configurable.cpp  transmitter.cpp
TESTS/: FREQUENCY_TEST_README.md  README.md  chord_diagnostic_test.cpp  chord_receiver.cpp  chord_transmitter_test.cpp  frequency_detector  frequency_detector.cpp  frequency_response_test.cpp  frequency_test.cpp  frequency_test_single.cpp  frequency_transmitter_test.cpp  mp3_recorder.cpp  protocol_test.cpp  receiver.cpp  simple_wav_recorder.cpp
TEST_RESULTS/: README.md  frequency_test_results_1764156937.csv  protocol_log_20251204_123539.txt  protocol_log_20251204_123618.txt  protocol_log_20251204_130130.txt  protocol_log_20251208_123655.txt  protocol_log_20251209_102254.txt  turtlebot_communication.db  turtlebot_log_20251204_131125.txt  turtlebot_log_20251204_131343.txt  turtlebot_log_20251204_134522.txt  turtlebot_log_20251204_135447.txt  turtlebot_log_20251204_135802.txt  turtlebot_log_20251204_140512.txt  turtlebot_log_20251204_142437.txt  turtlebot_log_20251204_142605.txt  turtlebot_log_20251208_123444.txt  turtlebot_log_20251208_123658.txt  turtlebot_log_20251208_133947.txt  turtlebot_log_20251208_134522.txt  turtlebot_log_20251208_141044.txt  turtlebot_log_20251208_141344.txt  turtlebot_log_20251208_141532.txt  turtlebot_log_20251208_141728.txt  turtlebot_log_20251208_141809.txt  turtlebot_log_20251208_142434.txt  turtlebot_log_20251208_142624.txt  turtlebot_log_20251208_143048.txt  turtlebot_log_20251208_143916.txt  turtlebot_log_20251208_144330.txt  turtlebot_log_20251208_145620.txt  turtlebot_log_20251208_150358.txt  turtlebot_log_20251208_151335.txt  turtlebot_log_20251208_151636.txt  turtlebot_log_20251209_101919.txt  turtlebot_log_20251209_102240.txt  turtlebot_log_20251209_103620.txt  turtlebot_log_20251209_103835.txt  turtlebot_log_20251209_104338.txt  turtlebot_log_20251209_105240.txt  (+21 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: README.md  ROS2_INTEGRATION.txt  chord_diagnostic_test.cpp  frequency_test.cpp  frequency_test_single.cpp  protocol_receiver  protocol_receiver.cpp  rb3_node_cpp.cpp  rb3_node_cpp.cpp.old  receiver.cpp  setup_vosk.sh  velocityProvider.cpp  velocityProvider.hpp  voice_receiver.cpp
